--- a/Product/product.css
+++ b/Product/product.css
@@ -5,37 +5,59 @@
 
 body {
     font-family: Arial, 'Helvetica', sans-serif;
-    height: auto;
+    max-height: 100%;
+    overflow-x: hidden;
+    box-sizing: border-box
 }
 
 header {
     display: flex;
     justify-content: space-between;
-    /* Ensures icons move to the right */
     align-items: center;
     padding: 15px 20px;
     background-color: #090101;
-    width: 100%;
+    max-width: 100%;
 }
 
 .nav-menu ul {
     display: flex;
     justify-content: flex-start;
     list-style: none;
-    gap: 20px;
+    gap: 1.3em;
     margin: 0;
     padding: 0;
 }
 
+
 .icons {
+    position: relative;
     display: flex;
-    gap: 40px;
+    gap: 2.5em;
     font-size: 1.5rem;
     cursor: pointer;
     color: #f7f1f1;
     margin-left: auto;
     margin-right: 200px;
 
+}
+
+#cart-count {
+    position: absolute;
+    top: -12px;
+    right: -3px;
+    background: red;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 50%;
+    padding: 4px 8px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+#cart-icon {
+    position: relative;
 }
 
 header .logo {
@@ -52,7 +74,7 @@ div img {
 main nav {
     display: flex;
     align-items: center;
-    gap: 50px;
+    gap: 3.1em;
     height: 100%;
     padding: 0;
     margin-top: 50px;
@@ -179,40 +201,24 @@ li input {
 }
 
 .advertise-phone {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin: 40px auto;
-    max-width: 1000px;
-}
-
-.advertise-phone {
-    display: flex;
-    align-items: center;
-    gap: 150px;
-    justify-content: center;
-    background: linear-gradient(to right bottom, #2E34B9 0%, #6541B6 47%, #924BB3 100%);
-    max-width: 100%;
+    position: relative;
     width: 100%;
-    height: 70vh;
+    height: 60vh;
+    overflow: hidden;
     margin-top: 40px;
+
+
 }
 
-.advertise-phone img {
-    z-index: 2;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    border-radius: 30px;
-    width: 25%;
-    height: auto;
-}
-
-.advertise-phone img:hover {
-    transform: translateY(-5px);
-    border: 2px solid #c491ee
-}
-
-.advertise-phone div h1 {
-    margin-bottom: 15px;
+.advertise-video {
+    position: absolute;
+    bottom: 0;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+    z-index: -1;
 }
 
 .recommeded-gamimg-phone h1 {
@@ -228,12 +234,10 @@ li input {
 .recommeded-gamimg-phone ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-
-    gap: 20px;
+    gap: .5em;
     list-style: none;
     padding: 0;
     margin: 0 60px 0 90px;
-    /* Default margins */
     transition: all 0.3s ease-in-out;
 
 }
@@ -243,8 +247,8 @@ li input {
     background: white;
     border-radius: 12px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    width: 250px;
-    height: 350px;
+    width: 80%;
+    height: 85%;
     padding: 15px;
     text-align: center;
     transition: transform 0.3s ease;
@@ -252,7 +256,7 @@ li input {
 }
 
 .recommeded-gamimg-phone li h1 {
-    font-size: 18px;
+    font-size: 1.1rem;
     margin: 30px 0;
 }
 
@@ -270,7 +274,7 @@ li input {
 }
 
 .price {
-    font-size: 16px;
+    font-size: 1em;
     font-weight: bold;
     color: #ff4500;
     display: inline-block;
@@ -283,11 +287,11 @@ li input {
 }
 
 .cart-btn {
-    background-color: #ff4500;
+    background-color: #262D33;
     color: white;
     border: none;
     padding: 8px 13px;
-    border-radius: 5px;
+    border-radius: 50px;
     cursor: pointer;
     font-size: 14px;
     gap: 5px;
@@ -319,12 +323,13 @@ li input {
 
 .best-seller-gamimg-phone h1 {
     margin: 50px 0px 40px 150px;
+    font-size: 1.1rem;
 }
 
 .best-seller-gamimg-phone ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    gap: .5em;
     list-style: none;
     padding: 0;
     margin: 0 60px 0 90px;
@@ -336,8 +341,8 @@ li input {
     background: white;
     border-radius: 12px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    width: 250px;
-    height: 350px;
+    width: 80%;
+    height: 85%;
     padding: 15px;
     text-align: center;
     transition: transform 0.3s ease;
@@ -345,8 +350,8 @@ li input {
 }
 
 .best-seller-gamimg-phone li h1 {
-    font-size: 18px;
-    margin: 30px 0;
+    font-size: 1rem;
+    margin: 20px 0;
 }
 
 .best-seller-gamimg-phone li:hover {
@@ -369,15 +374,16 @@ li input {
 
 .all-products h1 {
     margin: 50px 0px 40px 150px;
+    font-size: 1rem;
 }
 
 .all-products ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    gap: .5em;
     list-style: none;
     padding: 0;
-    margin: 0 60px 0 90px;
+    margin: 0 50px 0 90px;
 
 }
 
@@ -386,8 +392,8 @@ li input {
     background: white;
     border-radius: 12px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    width: 250px;
-    height: 350px;
+    width: 80%;
+    height: 70%;
     padding: 15px;
     margin-bottom: 30px;
     text-align: center;
@@ -396,8 +402,8 @@ li input {
 }
 
 .all-products li h1 {
-    font-size: 18px;
-    margin: 30px 0;
+    font-size: 1em;
+    margin: 10px 0;
 }
 
 .all-products li:hover {
@@ -414,36 +420,66 @@ li input {
 }
 
 footer {
-    margin-top: 150px;
+    margin-top: 2rem;
     width: 100%;
-    height: 50vh;
+    height: auto;
     background: #f4f5f6;
+    padding: 2rem 0;
 
 }
 
 footer h1 {
-    margin-left: 240px;
-    padding-top: 80px;
+    margin-left: 5%;
+    padding-top: 2rem;
+    font-size: 2rem;
+
 }
 
 footer ul {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 30px;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    padding: 0 1rem;
+}
+
+footer li {
+    list-style: none;
+    font-size: 1rem;
+    color: #918e8e;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    text-align: left;
+    flex: 1;
+    min-width: 200px;
+
 }
 
 footer li h3 {
     color: #4e4d4c;
     margin-bottom: 10px;
+
 }
 
-footer li {
-    list-style: none;
-    font-size: 18px;
-    color: #918e8e;
-    padding: 5px;
-    margin: 5px;
+footer li h4 {
+    font-size: .8rem;
 }
+
+footer li img {
+    width: 80%;
+    max-width: 150px;
+}
+
+footer li div {
+    display: flex;
+    gap: 10px;
+}
+
+footer li div i {
+    font-size: 1.5rem;
+    color: #4e4d4c;
+}
+
 
 @media (max-width:1500px) {
     .advertise-phone {
@@ -457,11 +493,6 @@ footer li {
 }
 
 @media (max-width: 1024px) {
-    .advertise-phone img {
-        width: 14%;
-        border-radius: 10px;
-    }
-
     .rating {
         display: none;
     }
@@ -509,24 +540,18 @@ footer li {
         display: none;
     }
 
-    .advertise-phone {
-        display: flex;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .advertise-phone img {
-        width: 30%;
-    }
-
     .recommeded-gamimg-phone ul,
     .best-seller-gamimg-phone ul,
     .all-products ul {
         grid-template-columns: repeat(2, 1fr);
-
         margin-left: 80px;
 
     }
+
+    footer {
+        max-width: 100%;
+    }
+
 }
 
 @media (max-width: 768px) {
@@ -536,6 +561,27 @@ footer li {
     .all-products ul {
         grid-template-columns: repeat(2, 1fr);
         margin: 0 20px;
+
+    }
+
+    .recommeded-gamimg-phone li img,
+    .best-seller-gamimg-phone li img,
+    .all-products li img {
+        width: 100%;
+        height: 40%;
+    }
+
+    li .price,
+    li .cart-btn {
+        text-align: left;
+
+    }
+
+    li .cart-btn {
+        max-width: 50%;
+        max-height: 50%;
+        font-size: .5em;
+        padding-left: 2.5em;
 
     }
 
@@ -572,6 +618,35 @@ footer li {
         border-radius: 10px;
     }
 
+    footer {
+        max-width: 100%;
+    }
+
+    footer h1 {
+        text-align: left;
+        margin-left: 2em;
+    }
+
+    footer ul {
+        flex-direction: row;
+        gap: .7em;
+    }
+
+    footer li {
+        width: 100%;
+        text-align: left;
+    }
+
+
+    footer li img {
+        width: 40%;
+    }
+
+    footer li div i {
+        margin-left: 0;
+    }
+
+
 }
 
 @media (max-width: 480px) {
@@ -584,12 +659,25 @@ footer li {
 
     }
 
-    .advertise-phone img {
+    .recommeded-gamimg-phone li img,
+    .best-seller-gamimg-phone li img,
+    .all-products li img {
+        width: 90%;
+        height: 40%;
+    }
 
-        display: flex;
-        margin-left: 30px;
-        width: 20%;
-        border-radius: 10px;
+    .recommeded-gamimg-phone li h1,
+    .best-seller-gamimg-phone li h1,
+    .all-products li h1 {
+        font-size: .8rem;
+    }
+
+    li .cart-btn {
+        max-width: 50%;
+        max-height: 100%;
+        font-size: .4em;
+        padding-left: 2.8em;
+
     }
 
     header {
@@ -601,7 +689,31 @@ footer li {
         gap: 15px;
     }
 
+    footer {
+        max-height: fit-content;
+    }
+
     li input {
         width: 100%;
+    }
+
+    footer h1 {
+        text-align: left;
+        margin-left: 2em;
+    }
+
+    footer ul {
+        flex-direction: row;
+        gap: .5em;
+    }
+
+    footer li {
+        width: 100%;
+
+    }
+
+    footer li img {
+        width: 40%;
+
     }
 }
