added logic for cart

--- a/Cart/styles.css
+++ b/Cart/styles.css
@@ -310,6 +310,11 @@ td.actions {
     text-align: left;
     outline: none;
 }
+
+/* .promo-section {
+    display: none; 
+} */
+
 /* Message styling */
 .promo-message {
     font-size: 14px;
