--- a/Product info/styles.css
+++ b/Product info/styles.css
@@ -41,28 +41,39 @@ header {
     gap: 40px;
     font-size: 1.5rem;
     cursor: pointer;
-    color: #f7f1f1;
+    color: #eae3e3;
     margin-left: auto;
     margin-right: 200px;
     position: relative;
 
 }
 
-#cart-icon {
-    position: relative;
-}
-
-#cart-count {
-    display: none;
+.icons #cart-count {
     background: red;
     color: white;
     border-radius: 50%;
     padding: 3px 6px;
-    font-size: 14px;
+    font-size: 15px;
     position: absolute;
-    top: -18px;
-    left: 5px;
+    top: -20px;
+    left: 3px;
     font-weight: bold;
+}
+
+a #cart-icon {
+    position: relative;
+
+}
+
+.icons a {
+    display: flex;
+    gap: 40px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: #eae3e3;
+    margin-left: auto;
+    text-decoration: none;
+    position: relative;
 }
 
 header .logo {
