--- a/Cart/styles.css
+++ b/Cart/styles.css
@@ -29,6 +29,10 @@ header {
     margin: 0;
     padding: 0;
 }
+.nav-menu a {
+    text-decoration: none;
+    color: inherit;
+}
 
 .icons {
     display: flex;
