--- a/Product/product.css
+++ b/Product/product.css
@@ -28,37 +28,51 @@ header {
     padding: 0;
 }
 
-
 .icons {
-    position: relative;
     display: flex;
-    gap: 2.5em;
+    gap: 40px;
     font-size: 1.5rem;
     cursor: pointer;
-    color: #f7f1f1;
+    color: #eae3e3;
     margin-left: auto;
     margin-right: 200px;
+    position: relative;
 
 }
 
-#cart-count {
-    position: absolute;
-    top: -12px;
-    right: -3px;
+.icons #cart-count {
     background: red;
     color: white;
-    font-size: 12px;
-    font-weight: bold;
     border-radius: 50%;
-    padding: 4px 8px;
-    display: none;
-    justify-content: center;
-    align-items: center;
+    padding: 3px 6px;
+    font-size: 15px;
+    position: absolute;
+    top: -17px;
+    left: 3px;
+    font-weight: bold;
 }
 
-#cart-icon {
+.nav-menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a #cart-icon {
+    position: relative;
+
+}
+
+.icons a {
+    display: flex;
+    gap: 40px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: #eae3e3;
+    margin-left: auto;
+    text-decoration: none;
     position: relative;
 }
+
 
 header .logo {
     display: flex;
